# git-commits-bullet-hell

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  args_parser.c  args_parser.h  buffer.c  buffer.h  build.c  enemy.c  enemy.h  flake.nix  main.c  main.h  math.c  math.h  pattern.c  pattern.h  player.c  player.h  utils.c  utils.h  version.h.in
cmake/: GitVersion.cmake
font/: tiny.c  tiny.h
include/: args_parser.h  enemy.h  main.h  my_math.h  pattern.h  player.h  utils.h
